# jlu_olshop

./: C++项目设计文档-γ版.md  LICENSE  README.md
client/: CMakeLists.txt  adminwindow.ui  assets.qrc  client.cpp  client.h  handler.cpp  handler.h  main.cpp  mainwindow.ui  qtgui.cpp  qtgui.h  shopcarwindow.ui  socket.cpp  socket.h  userwindow.ui
client/log/: CMakeLists.txt
client/log/include/: extraio.h  log.h
client/log/src/: log.cpp
client/tests/: testController.cpp  testGui.cpp  testSocketer.cpp  testlog.cpp
client/utils/: dataType.h  datawarpper.h  myqtcompents.h  singleton.h  utils.cpp  utils.h
server/: .gitignore  build.gradle
server/src/main/java/net/yurzi/common/: BuyHandler.java  Handler.java  HeartHandler.java  Hello.java  ItemDelHandler.java  ItemListHandler.java  ItemUpdateHandler.java  MybatisUitls.java  SessionIdHandler.java  SocketHandler.java  UserDelHandler.java  UserLoginHandler.java  UserLogoutHandler.java  UserRegisterHandler.java  UserUpdateHandler.java
server/src/main/java/net/yurzi/controller/: Controller.java  Main.java  SocketController.java
server/src/main/java/net/yurzi/dao/: ItemMapper.java  TableInit.java  UserMapper.java
server/src/main/java/net/yurzi/data/: Chat.java  DataPackage.java  DataPackageWrapper.java  History.java  Item.java  Order.java  Privilege.java  SnowFlakeGenerateIdWorker.java  User.java
server/src/main/java/net/yurzi/network/: SocketPackgeType.java  SocketServer.java  Socketer.java
server/src/main/resources/: log4j2.xml  mybatis-config.xml
server/src/main/resources/mappers/: item_mapper.xml  tableInit_mapper.xml  user_mapper.xml
server/src/test/java/: TestItemDao.java
